[gd_scene format=3 uid="uid://cr4p5m8nq3vwf"]

[ext_resource type="Script" path="res://scripts/gameplay/FarField.gd" id="1_farfield"]

[node name="FarField" type="Node2D"]
script = ExtResource("1_farfield")

[node name="EmissionOrigin" type="Marker2D" parent="."]
position = Vector2(0, 110)
gizmo_extents = 10.0

[node name="PelletContainer" type="Node2D" parent="."]
